[gd_scene load_steps=11 format=2]

[ext_resource path="res://characters/Evelyne/evelyne_satisfaite.png" type="Texture" id=1]
[ext_resource path="res://characters/Patrick/Patrick sans Barbe/Pat_cool.png" type="Texture" id=2]
[ext_resource path="res://characters/Jean-Michel/Jean-Mechant.png" type="Texture" id=3]
[ext_resource path="res://backgrounds/bureauGroupe-1.jpg" type="Texture" id=4]
[ext_resource path="res://styles/Panel.tres" type="StyleBox" id=5]
[ext_resource path="res://scenes/typo/GameTitle.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://scenes/typo/Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://characters/Valentin/Valentin_content.png" type="Texture" id=9]
[ext_resource path="res://characters/Guillaume/Guillaume_normal.png" type="Texture" id=10]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 10
custom_constants/margin_left = 100
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 10.0
margin_right = 1820.0
margin_bottom = 1070.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTitle" parent="MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 1720.0
margin_bottom = 1042.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 901.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 200.0
margin_right = 350.0
margin_bottom = 700.0
rect_min_size = Vector2( 350, 500 )
custom_styles/panel = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 330.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer"]
margin_left = 73.0
margin_top = 10.0
margin_right = 237.0
margin_bottom = 450.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 164.0
margin_bottom = 52.0
text = "Chapitre 1"

[node name="SecondChapter" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 72.0
margin_right = 164.0
margin_bottom = 124.0
text = "Chapitre 2"

[node name="ContinueButton" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 144.0
margin_right = 164.0
margin_bottom = 196.0
text = "Continuer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 164.0
margin_bottom = 318.0
custom_constants/margin_top = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer/MarginContainer" instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 50.0
margin_right = 164.0
margin_bottom = 102.0
text = "Cr√©dits"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 164.0
margin_bottom = 440.0
custom_constants/margin_top = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2" instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 50.0
margin_right = 164.0
margin_bottom = 102.0
text = "Quitter"

[node name="Characters" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 354.0
margin_right = 1720.0
margin_bottom = 901.0
size_flags_horizontal = 3

[node name="Patrick" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Characters"]
margin_left = 405.0
margin_top = 126.0
margin_right = 1278.0
margin_bottom = 1956.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jean-Michel" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Characters"]
margin_left = 13.0
margin_top = 82.0
margin_right = 885.997
margin_bottom = 1911.99
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Evelyne" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Characters"]
margin_left = 205.0
margin_top = 122.0
margin_right = 1078.0
margin_bottom = 1951.99
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Valentin" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Characters"]
margin_left = 832.0
margin_top = 163.0
margin_right = 1238.0
margin_bottom = 945.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guy Guillaume" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Characters"]
margin_left = 930.0
margin_top = -970.0
margin_right = 1600.0
margin_bottom = 133.0
texture = ExtResource( 10 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Baptiste" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Characters"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 1046.0
margin_right = 1720.0
margin_bottom = 1060.0
text = "Serious Game on Ethics v0.1"
align = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer/SecondChapter" to="." method="_on_SecondChapter_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer/MarginContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/VBoxContainer/MarginContainer2/ExitButton" to="." method="_on_ExitButton_pressed"]
